# pyPochodnia

./: README.md  main.py  pypochodnia_vs_scikit.ipynb  pyproject.toml  requirements.txt
app/layers/: __init__.py  activation.py  dense.py
app/models/: sequential.py
app/node/: __init__.py  constant.py  node.py  variable.py
app/node/operations/: __init__.py  activation.py  loss.py
app/node/operations/arithmetic/: __init__.py  add.py  matmul.py  multiply.py  power.py  subtract.py
app/optimizers/: __init__.py  optimizer.py
app/utils/: __init__.py  graph_visualizer.py  metrics.py  node_utils.py
examples/: example_sequential.py  example_sequential_api.py
